fix(files-widget): fixed not sufficient size or spacing

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -91,7 +91,7 @@ $base-font-size: 16px;
   --p-form-field-hover-border-color: var(--grey-1);
   --p-form-field-disabled-background: var(--white);
   --p-form-field-disabled-color: var(--grey-1);
-  --p-form-field-placeholder-color: var(--grey-1);
+  --p-form-field-placeholder-color: var(--grey-4);
   --p-list-option-color: var(--dark-blue-1);
   --p-list-option-focus-color: var(--dark-blue-1);
   --p-list-option-focus-background: var(--bg-blue-3);
